Exclusion ante du Pot lors de l'import de mains + plus de critère hybride extension + mains toujours fold dans range